# OpenTTD

./: .clang-format  .dorpsgek.yml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .hgignore  BUGS  CMakeLists.txt  CODINGSTYLE.md  COMPILING.md  CONTRIBUTING.md  COPYING  COPYING.md  CPackProperties.cmake.in  CREDITS.md  Dockerfile  Doxyfile  Doxyfile.in  Jamfile.next  Jenkinsfile  Keep Sake  Makefile  Makefile.bundle  Makefile.bundle.in  Makefile.grf.in  Makefile.in  Makefile.lang.in  Makefile.msvc  Makefile.setting.in  Makefile.src.in  README(korean).md  README.md  REVIEWING.md  StdAfx.c  TUTORIAL_IMAGES_README.md  ai.c  ai.h  ai_build.c  ai_new.c  (+300 more)
media/: CMakeLists.txt  openttd.32.xpm  openttd.64.xpm  openttd.desktop  openttd.desktop.filter.awk  openttd.desktop.in  openttd.desktop.translation.awk  org.openttd.OpenTTD.metainfo.xml
media/baseset/: CMakeLists.txt  OpenTTD-font.md  no_music.obm  no_sound.obs  openttd.grf  openttd.grf.hash  openttd.grf.md5  opntitle_arctic.sav  opntitle_toyland.sav  opntitle_tropic.sav  orig_dos.obg  orig_dos.obm  orig_dos.obs  orig_dos_de.obg  orig_extra.grf  orig_extra.grf.hash  orig_extra.grf.md5  orig_tto.obm  orig_win.obg  orig_win.obm  orig_win.obs  translations.awk  translations.vbs
media/extra_grf/: 2ccmap.nfo  2ccmapd.nfo  2ccmapw.nfo  airport_preview.nfo  airport_preview.pcx  airport_preview_city.pcx  airport_preview_commuter.pcx  airport_preview_helidepot.pcx  airport_preview_heliport.pcx  airport_preview_helistation.pcx  airport_preview_intercontinental.pcx  airport_preview_international.pcx  airport_preview_metropolitan.pcx  airport_preview_small.pcx  airports.nfo  airports.pcx  airports_orig_extra.nfo  aqueduct.nfo  aqueduct.pcx  assemble_nfo.awk  autorail.nfo  autorail.pcx  canals.nfo  canals.pcx  canals_extra.nfo  chars.nfo  chars.pcx  chars_orig_extra.nfo  elrails.nfo  elrails.pcx  fix_graphics.nfo  fix_graphics.pcx  fix_graphics_pillar_cantilever.pcx  fix_graphics_pillar_tubular.pcx  flags.nfo  flags.pcx  foundations.nfo  foundations.pcx  mono.nfo  oneway.nfo  (+18 more)
src/: CMakeLists.txt  aircraft.h  aircraft_cmd.cpp  aircraft_cmd.h  aircraft_gui.cpp  airport.cpp  airport.h  airport_cmd.h  airport_gui.c  airport_gui.cpp  airport_movement.h  animated_tile.cpp  animated_tile_func.h  animated_tile_map.h  articulated_vehicles.cpp  articulated_vehicles.h  autocompletion.cpp  autocompletion.h  autoreplace.cpp  autoreplace_base.h  autoreplace_cmd.cpp  autoreplace_cmd.h  autoreplace_func.h  autoreplace_gui.cpp  autoreplace_gui.h  autoreplace_type.h  autoslope.h  aystar.cpp  aystar.h  base_consist.cpp  base_consist.h  base_media_base.h  base_media_func.h  base_media_graphics.h  base_media_music.h  base_media_sounds.h  base_station_base.h  bitmap_type.h  bmp.cpp  bmp.h  (+716 more)
src/ai/: CMakeLists.txt  ai.cpp  ai.h  ai.hpp  ai_config.cpp  ai_config.h  ai_config.hpp  ai_core.cpp  ai_gui.cpp  ai_gui.h  ai_gui.hpp  ai_info.cpp  ai_info.h  ai_info.hpp  ai_info_dummy.cpp  ai_instance.cpp  ai_instance.h  ai_instance.hpp  ai_scanner.cpp  ai_scanner.h  ai_scanner.hpp  ai_storage.hpp
src/blitter/: 32bpp_anim.cpp  32bpp_anim.h  32bpp_anim.hpp  32bpp_anim_sse2.cpp  32bpp_anim_sse2.h  32bpp_anim_sse2.hpp  32bpp_anim_sse4.cpp  32bpp_anim_sse4.h  32bpp_anim_sse4.hpp  32bpp_base.cpp  32bpp_base.h  32bpp_base.hpp  32bpp_optimized.cpp  32bpp_optimized.h  32bpp_optimized.hpp  32bpp_simple.cpp  32bpp_simple.h  32bpp_simple.hpp  32bpp_sse2.cpp  32bpp_sse2.h  32bpp_sse2.hpp  32bpp_sse4.cpp  32bpp_sse4.h  32bpp_sse4.hpp  32bpp_sse_func.h  32bpp_sse_func.hpp  32bpp_sse_type.h  32bpp_ssse3.cpp  32bpp_ssse3.h  32bpp_ssse3.hpp  40bpp_anim.cpp  40bpp_anim.h  40bpp_anim.hpp  8bpp_base.cpp  8bpp_base.h  8bpp_base.hpp  8bpp_debug.cpp  8bpp_debug.hpp  8bpp_optimized.cpp  8bpp_optimized.h  (+18 more)
src/core/: CMakeLists.txt  alloc_func.cpp  alloc_func.h  alloc_func.hpp  alloc_type.h  alloc_type.hpp  areaquery_type.hpp  backup_type.h  backup_type.hpp  base_bitset_type.hpp  bitmath_func.cpp  bitmath_func.h  bitmath_func.hpp  container_func.h  container_func.hpp  convertible_through_base.hpp  endian_func.h  endian_func.hpp  endian_type.h  endian_type.hpp  enum_type.h  enum_type.hpp  flatset_type.hpp  format.h  format.hpp  geometry_func.cpp  geometry_func.h  geometry_func.hpp  geometry_func_unittest.cpp  geometry_type.h  geometry_type.hpp  kdtree.h  kdtree.hpp  label.cpp  label_type.hpp  linearquery_type.hpp  math_func.cpp  math_func.h  math_func.hpp  math_func_unittest.cpp  (+34 more)
src/depend/: depend.cpp
src/fontcache/: CMakeLists.txt  freetypefontcache.cpp  iconfontcache.cpp  iconfontcache.h  spritefontcache.cpp  spritefontcache.h  truetypefontcache.cpp  truetypefontcache.h
src/game/: CMakeLists.txt  game.h  game.hpp  game_config.cpp  game_config.h  game_config.hpp  game_core.cpp  game_gui.cpp  game_gui.h  game_gui.hpp  game_info.cpp  game_info.h  game_info.hpp  game_instance.cpp  game_instance.h  game_instance.hpp  game_scanner.cpp  game_scanner.h  game_scanner.hpp  game_text.cpp  game_text.h  game_text.hpp
src/lang/: CMakeLists.txt  afrikaans.txt  american.txt  arabic_egypt.txt  basque.txt  belarusian.txt  brazilian_portuguese.txt  bulgarian.txt  catalan.txt  chinese_hong_kong.txt  chuvash.txt  croatian.txt  czech.txt  danish.txt  dutch.txt  english.txt  english_AU.txt  english_US.txt  esperanto.txt  estonian.txt  faroese.txt  finnish.txt  french.txt  frisian.txt  gaelic.txt  galician.txt  german.txt  greek.txt  hebrew.txt  hindi.txt  hungarian.txt  icelandic.txt  ido.txt  indonesian.txt  irish.txt  italian.txt  japanese.txt  korean.txt  latin.txt  latvian.txt  (+32 more)
src/linkgraph/: CMakeLists.txt  demands.cpp  demands.h  flowmapper.cpp  flowmapper.h  init.h  linkgraph.cpp  linkgraph.h  linkgraph_base.h  linkgraph_gui.cpp  linkgraph_gui.h  linkgraph_type.h  linkgraphjob.cpp  linkgraphjob.h  linkgraphjob_base.h  linkgraphschedule.cpp  linkgraphschedule.h  mcf.cpp  mcf.h  refresh.cpp  refresh.h
src/misc/: CMakeLists.txt  alternating_iterator.hpp  array.h  array.hpp  autocopyptr.hpp  autoptr.hpp  autorelease.hpp  binaryheap.h  binaryheap.hpp  blob.hpp  countedobj.cpp  countedptr.h  (+20 more)
(+2276 files in other folders)
